# final-project-sale-and-rental-of-estate

./: .gitignore  README.md  pyproject.toml
notebooks/: EDA.ipynb  _bek.ipynb
notebooks/bek/: merge_part_1.ipynb  merge_part_2.ipynb  preprocessing_part_1.ipynb  preprocessing_part_2.ipynb  preprocessing_part_3.ipynb  test.ipynb
notebooks/vanya/: README.md  preprocessing_part_1.ipynb  preprocessing_part_2.ipynb  preprocessing_part_3.ipynb
realises/: EDA.html  EDA.ipynb  data.csv  seaborn_team_data.csv
tmp_data/: bek_processed_part_1.csv  bek_processed_part_2.csv  merged_part_1.csv  merged_part_2.csv  vanya_processed_part_1.csv  vanya_processed_part_2.csv
